# BeyondCV

./: .gitignore  Architecture.md  README.md  TODO.md  USAGE.md  pyproject.toml  pyrightconfig.json
.github/workflows/: python-publish.yml
BeyondCV/: __main__.py  config.py  default_config.yaml  utils.py
BeyondCV/DocumentBuilder/: DocBuilder.py  DocxTranslator.py
BeyondCV/LLM/: CVFields.py  LLMInvoker.py  __init__.py  prompt.txt  utils.py
BeyondCV/TableBuilder/: Builder.py  Components.py  Table.py  __init__.py
BeyondCV/Template/: Template.py  __init__.py
BeyondCV/Translator/: DocTranslator.py  DocxTranslator.py  TeXTranslator.py  __init__.py
BuildImpl/: ProfileMaker.py  README.md  TableBuilder.py  config.py  main.py  prompt.txt  utils.py
