[project]
name = "BeyondCV"
version = "0.1.4"
authors = [
    { name="Abdallah Soliman", email="abdallahsoliman03@gmail.com" },
]
description = "A CV builder."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
dependencies = [
    "addict>=2.4.0",
    "colour>=0.1.5",
    "debugpy>=1.8.20",
    "dotenv>=0.9.9",
    "openai>=2.36.0",
    "pypdf>=6.11.0",
    "python-docx>=1.2.0",
    "pyyaml>=6.0.3",
]

[project.urls]
Homepage = "https://github.com/abdallahsoliman00/BeyondCV"
Repository = "https://github.com/abdallahsoliman00/BeyondCV"

[build-system]
requires = ["uv_build >= 0.11.7, <0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "BeyondCV"
module-root = ""
